# osgcairo

./: CMakeLists.txt  ProjectHome.md  README  README.rst  TODO
etc/: Doxyfile  FindOpenSceneGraph.cmake  FindWin32GTKBundle.cmake  FindosgCairo.cmake  win32-build-helper
etc/docs/: demo.cpp
etc/win-static-deps/: CMakeLists.txt
etc/win-static-deps/cairo/: CMakeLists.txt  cairo-features.h
etc/win-static-deps/expat/: CMakeLists.txt
etc/win-static-deps/freetype/: CMakeLists.txt
etc/win-static-deps/libpng/: CMakeLists.txt
etc/win-static-deps/pixman/: CMakeLists.txt
etc/win-static-deps/zlib/: CMakeLists.txt
examples/osgcairodistancefield/: CMakeLists.txt  osgcairodistancefield.cpp
examples/osgcairodistancefield/shaders/: normal-frag.glsl
examples/osgcairodrawspeed/: CMakeLists.txt  osgcairodrawspeed.cpp
examples/osgcairomatrix/: CMakeLists.txt
examples/osgcairopdf/: CMakeLists.txt  osgcairopdf.cpp
examples/osgcairoroads/: osgcairoroads.cpp
examples/osgcairotests/: osgcairotests.cpp
examples/osgcairoutil/: CMakeLists.txt  osgcairoutil.cpp
examples/osgcairoviewer/: CMakeLists.txt  osgcairoviewer.cpp
examples/osgcairowidget/: CMakeLists.txt  osgcairowidget.cpp
ext/: README.rst
include/osgCairo/: Canvas  Export  Glyph  Image  Matrix  Notify  Path  Pattern  ReadFile  ScaledFont  Surface  SurfaceImage  Types  Util  Version
src/: Canvas.cpp  Image.cpp  LibraryWrapper.cpp  Matrix.cpp  Path.cpp  ReadFile.cpp  Surface.cpp  SurfaceImage.cpp  Types.cpp  Util.cpp
src/osgPlugins/: CMakeLists.txt
src/serializers/: Image.cpp
src/util/: DisplacedBlur.cpp  Emboss.cpp  GaussianBlur.cpp  MapPathOnto.cpp  Util.cpp
tags/0.1/: AUTHORS  CMakeLists.txt  README
tags/0.1/etc/: FindOpenSceneGraph.cmake  win32-build-helper
tags/0.1/examples/osgcairodrawspeed/: CMakeLists.txt  osgcairodrawspeed.cpp
tags/0.1/examples/osgcairomatrix/: CMakeLists.txt  osgcairomatrix.cpp
tags/0.1/examples/osgcairoutil/: osgcairoutil.cpp
tags/0.1/examples/osgcairoviewer/: CMakeLists.txt
tags/0.1/examples/osgcairowidget/: CMakeLists.txt  osgcairowidget.cpp
tags/0.1/include/osgCairo/: Export  Glyph  Image  Types
tags/0.1/src/: Canvas.cpp  Image.cpp  Matrix.cpp  Pattern.cpp  ReadFile.cpp  Types.cpp
tags/0.1/tools/: cairodraw  example-1.cairo
tags/1.0.0/: CMakeLists.txt
tags/1.0.0/examples/osgcairodistancefield/: osgcairodistancefield.cpp
tags/1.0.0/examples/osgcairodistancefield/shaders/: outline-frag.glsl
tags/1.0.0/examples/osgcairodrawspeed/: CMakeLists.txt
tags/1.0.0/examples/osgcairoutil/: CMakeLists.txt  osgcairoutil.cpp
tags/1.0.0/examples/osgcairoviewer/: osgcairoviewer.cpp
tags/1.0.0/include/osgCairo/: Image  ReadFile  Util  Version
tags/1.0.0/src/: Image.cpp  Util.cpp
tags/1.4.0/examples/osgcairotests/: osgcairotests.cpp
tags/1.4.0/include/osgCairo/: Notify  Version
tags/1.4.0/src/: Image.cpp
tags/1.4.1/examples/osgcairodistancefield/: osgcairodistancefield.cpp
tags/1.4.1/examples/osgcairodistancefield/shaders/: normal-vert.glsl  outline-frag.glsl
tags/1.4.1/examples/osgcairotests/: osgcairotests.cpp
tags/1.4.1/examples/osgcairoutil/: osgcairoutil.cpp
tags/1.4.1/include/osgCairo/: Version
tags/1.5.0/: CMakeLists.txt
tags/1.5.0/etc/: Doxyfile  FindWin32GTKBundle.cmake
tags/1.5.0/etc/docs/: footer.html
tags/1.5.0/etc/win-static-deps/cairo/: CMakeLists.txt
tags/1.5.0/etc/win-static-deps/fontconfig/: CMakeLists.txt
tags/1.5.0/etc/win-static-deps/pixman/: CMakeLists.txt
tags/1.5.0/examples/osgcairodistancefield/: CMakeLists.txt
tags/1.5.0/examples/osgcairodistancefield/shaders/: shifted-frag.glsl  (+1 more)
tags/1.5.0/examples/osgcairodrawspeed/: CMakeLists.txt  osgcairodrawspeed.cpp
tags/1.5.0/examples/osgcairoroads/: CMakeLists.txt
tags/1.5.0/examples/osgcairotests/: CMakeLists.txt
tags/1.5.0/examples/osgcairoutil/: osgcairoutil.cpp
tags/1.5.0/examples/osgcairoviewer/: CMakeLists.txt  osgcairoviewer.cpp
tags/1.5.0/ext/: README
tags/1.5.0/include/osgCairo/: Export  Image  Util  Version
tags/1.5.0/src/: Image.cpp  LibraryWrapper.cpp  Util.cpp
tags/1.5.0/trunk/: AUTHORS
tags/1.5.0/trunk/etc/win-static-deps/freetype/: CMakeLists.txt
tags/1.5.0/trunk/examples/osgcairoroads/: CMakeLists.txt
tags/1.5.0/trunk/src/: ReadFile.cpp
tools/: cairodraw  example-1.cairo  theme.cairo
tools/examples/: displacedBlur.py  emboss.py  mapPathOnto.py
tools/osgcairoutil/: Makefile  make-win.bat  osgcairoutil.cpp
trunk/: CMakeLists.txt  README  TODO
trunk/etc/: FindOpenSceneGraph.cmake  FindWin32GTKBundle.cmake  win32-build-helper
trunk/etc/win-static-deps/: CMakeLists.txt
trunk/etc/win-static-deps/cairo/: CMakeLists.txt  cairo-features.h
trunk/etc/win-static-deps/expat/: CMakeLists.txt
trunk/etc/win-static-deps/fontconfig/: CMakeLists.txt
trunk/etc/win-static-deps/libpng/: CMakeLists.txt
trunk/etc/win-static-deps/pixman/: CMakeLists.txt
trunk/etc/win-static-deps/zlib/: CMakeLists.txt
trunk/examples/osgcairodistancefield/: CMakeLists.txt  osgcairodistancefield.cpp
trunk/examples/osgcairomatrix/: CMakeLists.txt  osgcairomatrix.cpp
trunk/examples/osgcairopdf/: CMakeLists.txt
trunk/examples/osgcairoroads/: CMakeLists.txt  osgcairoroads.cpp
trunk/examples/osgcairotests/: CMakeLists.txt
trunk/examples/osgcairoutil/: CMakeLists.txt  osgcairoutil.cpp
trunk/examples/osgcairoviewer/: CMakeLists.txt  osgcairoviewer.cpp
trunk/examples/osgcairowidget/: CMakeLists.txt  osgcairowidget.cpp
trunk/include/osgCairo/: Canvas  Export  Glyph  Image  Matrix  Path  Pattern  ReadFile  ScaledFont  Surface  SurfaceImage  Text  Types  Util  Version
trunk/src/: Canvas.cpp  Image.cpp  Matrix.cpp  Path.cpp  Pattern.cpp  ReadFile.cpp  Surface.cpp  SurfaceImage.cpp  Types.cpp  Util.cpp
trunk/src/osgPlugins/: ReaderWriterCairo.cpp
trunk/src/serializers/: Image.cpp  LibraryWrapper.cpp
trunk/src/util/: DisplacedBlur.cpp  Emboss.cpp  Util.cpp
trunk/tools/: cairodraw
trunk/tools/examples/: displacedBlur.py  emboss.py  embossText.py  gaussianBlur.py
trunk/tools/osgcairoutil/: Makefile  __init__.py  osgcairoutil.cpp
